Fixed dockerfile